fix mostly fluid code and spacing

--- a/assets/css/lib-style.css
+++ b/assets/css/lib-style.css
@@ -124,6 +124,8 @@ a:hover {
 
 iframe {
 	width: 100%;
+	border: 2px solid lightgray;
+	box-shadow: 2px 2px 2px #EEE;
 }
 
 hr {
